# healthgps-data

./: .pre-commit-config.yaml  AmalgamateDiseaseData.R  CheckDiseaseDataComplete.R  CheckIncidenceOfDiseases.R  ProcessImpactFractionEstimates.R  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  validate_index_json.py
.github/workflows/: release.yml  validate-index-json.yml
data/: index.json
data/analysis/: disability_weights.csv
data/diseases/: Alcohol_PIF_10p-increase-in-price_Female.csv  Alcohol_PIF_10p-increase-in-price_Male.csv  Alcohol_PIF_20p-increase-in-price_Female.csv  Alcohol_PIF_20p-increase-in-price_Male.csv  Alcohol_PIF_40p-increase-in-price_Female.csv  Alcohol_PIF_40p-increase-in-price_Male.csv  PIF-joint_10p-increase-in-price_Female_35over.csv  PIF-joint_10p-increase-in-price_Male_35over.csv  PIF-joint_20p-increase-in-price_Female_35over.csv  PIF-joint_20p-increase-in-price_Male_35over.csv  PIF-joint_40p-increase-in-price_Female_35over.csv  PIF-joint_40p-increase-in-price_Male_35over.csv  PIF_Mappings.xlsx  Smoking_PIF-MORBIDITY_10p-increase-in-price_Female.csv  Smoking_PIF-MORBIDITY_10p-increase-in-price_Female_rev5yAvg.csv  Smoking_PIF-MORBIDITY_10p-increase-in-price_Male.csv  Smoking_PIF-MORBIDITY_10p-increase-in-price_Male_rev5yAvg.csv  Smoking_PIF-MORBIDITY_20p-increase-in-price_Female.csv  Smoking_PIF-MORBIDITY_20p-increase-in-price_Female_rev5yAvg.csv  Smoking_PIF-MORBIDITY_20p-increase-in-price_Male.csv  Smoking_PIF-MORBIDITY_20p-increase-in-price_Male_rev5yAvg.csv  Smoking_PIF-MORBIDITY_40p-increase-in-price_Female.csv  (+4 more)
(+422 files in other folders)
